remove link on main page

--- a/mainapp/templates/mainapp/includes/content.html
+++ b/mainapp/templates/mainapp/includes/content.html
@@ -29,11 +29,11 @@
                     <div class="box_content_info_center">
                         <p class="content_info_center">{% chunk 'ABOUT_ORG' 'chunk_html'%}</p>
                     </div>
-                    <div class="link__read__more">
+                    {% comment %} <div class="link__read__more">
                         <a href="{% url 'center_ano_dpo' %}#page-top" class="read__more__link">
                             Подробнее <img src="{% static 'img/arrow__next.png' %}" alt="">
                         </a>
-                    </div>
+                    </div> {% endcomment %}
 
 
                 </div>
