--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -40,7 +40,7 @@
              {{ contact.title }}
             </div>
             <div class="position">
-             {{ contact.short_description }}
+             {{ contact.description }}
             </div>
             <div class="phone_name">
                 {{ contact.phone }}
